--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "express-fileupload": "^1.2.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7"
+    "mongoose": "^6.0.7",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.5",
+    "socket.io": "^4.2.0"
   }
 }
