--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "scss": "node-sass --watch scss -o css" 
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
     "morgan": "^1.10.0",
+    "node-sass": "^6.0.1",
     "nodemailer": "^6.6.5",
     "socket.io": "^4.2.0"
   }
